force-app/main/default/objects/Expense__c/fields/BillingReceiver__c.field-meta.xml
<CustomField>
    <fullName>BillingReceiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Receiver</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses (Billing Receiver)</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>