force-app/main/default/objects/Expense__c/fields/BillingViaCompany__c.field-meta.xml
<CustomField>
    <fullName>BillingViaCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing via (Company)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses (Billing via (Company))</relationshipLabel>
    <relationshipName>ExpensesBillingViaCompany</relationshipName>
    <type>Lookup</type>
</CustomField>