force-app/main/default/objects/Expense__c/fields/BusinessReason__c.field-meta.xml
<CustomField>
    <fullName>BusinessReason__c</fullName>
    <label>Business Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>