force-app/main/default/objects/Expense__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must choose a car with the same currency as the expense currency.
(Lookup Filter)</errorMessage>
        <filterItems>
            <field>Inventory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Car</value>
        </filterItems>
        <filterItems>
            <field>Inventory__c.Status__c</field>
            <operation>equals</operation>
            <value>In Use</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Expenses (Car)</relationshipLabel>
    <relationshipName>ExpensesCar</relationshipName>
    <type>Lookup</type>
</CustomField>