force-app/main/default/objects/Expense__c/fields/CarName__c.field-meta.xml
<CustomField>
    <fullName>CarName__c</fullName>
    <formula>Car__r.InventoryName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Car Name</label>
    <type>Text</type>
</CustomField>