force-app/main/default/objects/Expense__c/fields/ContractPartner__c.field-meta.xml
<CustomField>
    <fullName>ContractPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses (Contract Partner)</relationshipLabel>
    <relationshipName>Expenses1</relationshipName>
    <type>Lookup</type>
</CustomField>