force-app/main/default/objects/Expense__c/fields/CostsExpenseGross__c.field-meta.xml
<CustomField>
    <fullName>CostsExpenseGross__c</fullName>
    <label>Costs - Expense Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>