force-app/main/default/objects/Expense__c/fields/CostsExpenseNet__c.field-meta.xml
<CustomField>
    <fullName>CostsExpenseNet__c</fullName>
    <label>Costs - Expense Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>