force-app/main/default/objects/Expense__c/fields/CostsExpenseNetCHF__c.field-meta.xml
<CustomField>
    <fullName>CostsExpenseNetCHF__c</fullName>
    <formula>CostsExpenseNet__c * CurrencyRateToCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costs - Expense Net (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>