force-app/main/default/objects/Expense__c/fields/CreditCardResponsibleCompany__c.field-meta.xml
<CustomField>
    <fullName>CreditCardResponsibleCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Card - Responsible Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Inventory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Credit Card</value>
        </filterItems>
        <filterItems>
            <field>Inventory__c.Status__c</field>
            <operation>equals</operation>
            <value>In Use</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>ExpensesCreditCard</relationshipName>
    <type>Lookup</type>
</CustomField>