force-app/main/default/objects/Expense__c/fields/CurrencyRateToProjectCurrency__c.field-meta.xml
<CustomField>
    <fullName>CurrencyRateToProjectCurrency__c</fullName>
    <description>Only for information, no functionality in code / 06.09.2016, ary</description>
    <formula>LocalCurrencyToCHF__c *1/ CurrencyRateToCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Rate to Project Currency</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>