force-app/main/default/objects/Expense__c/fields/ExpenseGross__c.field-meta.xml
<CustomField>
    <fullName>ExpenseGross__c</fullName>
    <label>Expense Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>