force-app/main/default/objects/Expense__c/fields/ExpenseGrossApproved__c.field-meta.xml
<CustomField>
    <fullName>ExpenseGrossApproved__c</fullName>
    <label>Expense Gross - Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>