force-app/main/default/objects/Expense__c/fields/ExpenseSubType__c.field-meta.xml
<CustomField>
    <fullName>ExpenseSubType__c</fullName>
    <label>Expense Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CarCompany</fullName>
                <label>Car (Company)</label>
            </value>
            <value>
                <fullName>CarPrivate</fullName>
                <label>Car (Private)</label>
            </value>
            <value>
                <fullName>PublicTransportation</fullName>
                <label>Public Transportation</label>
            </value>
            <value>
                <fullName>CarRental</fullName>
                <label>Car (Rental)</label>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Airplane</fullName>
            </value>
            <value>
                <fullName>Accomodation</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>