force-app/main/default/objects/Expense__c/fields/Expensetracker__c.field-meta.xml
<CustomField>
    <fullName>Expensetracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expensetracker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>ExpensesExpensetracker</relationshipName>
    <type>Lookup</type>
</CustomField>