force-app/main/default/objects/Expense__c/fields/ExpensetrackerCompany__c.field-meta.xml
<CustomField>
    <fullName>ExpensetrackerCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expensetracker Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>ExpensesExpensetrackerCompany</relationshipName>
    <type>Lookup</type>
</CustomField>