force-app/main/default/objects/Expense__c/fields/ExpensetrackerCostCenter__c.field-meta.xml
<CustomField>
    <fullName>ExpensetrackerCostCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Expensetracker Cost Center</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Expenses (Expensetracker Cost Center)</relationshipLabel>
    <relationshipName>Expenses1</relationshipName>
    <type>Lookup</type>
</CustomField>