force-app/main/default/objects/Expense__c/fields/ExpensetrackerCostCenterNr__c.field-meta.xml
<CustomField>
    <fullName>ExpensetrackerCostCenterNr__c</fullName>
    <label>Expensetracker Cost Center Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>