force-app/main/default/objects/Expense__c/fields/ExpensetrackerStaffNr__c.field-meta.xml
<CustomField>
    <fullName>ExpensetrackerStaffNr__c</fullName>
    <label>Expensetracker Staff Nr.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>