force-app/main/default/objects/Expense__c/fields/ExpenseType__c.field-meta.xml
<CustomField>
    <fullName>ExpenseType__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Type</label>
    <type>Text</type>
</CustomField>