force-app/main/default/objects/Expense__c/fields/ExpenseValidatedFinance__c.field-meta.xml
<CustomField>
    <fullName>ExpenseValidatedFinance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expense Validated - Finance</label>
    <type>Checkbox</type>
</CustomField>