force-app/main/default/objects/Expense__c/fields/ExpenseValidatedProjectResponsible__c.field-meta.xml
<CustomField>
    <fullName>ExpenseValidatedProjectResponsible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expense Validated - Project Responsible</label>
    <type>Checkbox</type>
</CustomField>