force-app/main/default/objects/Expense__c/fields/IsInBillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>IsInBillingPeriod__c</fullName>
    <formula>IsInBillingPeriodYearMonth__c =  ProjectCostCenter__r.BillingPeriod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is In Billing Period</label>
    <type>Checkbox</type>
</CustomField>