force-app/main/default/objects/Expense__c/fields/IsInBillingPeriodYearMonth__c.field-meta.xml
<CustomField>
    <fullName>IsInBillingPeriodYearMonth__c</fullName>
    <label>Is In Billing Period Year/Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>