force-app/main/default/objects/Expense__c/fields/ListOfNames__c.field-meta.xml
<CustomField>
    <fullName>ListOfNames__c</fullName>
    <label>List of Names</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>