force-app/main/default/objects/Expense__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>CompanyCreditCard</fullName>
                <label>Company (Credit Card)</label>
            </value>
            <value>
                <fullName>CompanyCash</fullName>
                <label>Company (Cash)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>