force-app/main/default/objects/Expense__c/fields/ProjectPartner__c.field-meta.xml
<CustomField>
    <fullName>ProjectPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses (Project Partner)</relationshipLabel>
    <relationshipName>Expenses2</relationshipName>
    <type>Lookup</type>
</CustomField>