force-app/main/default/objects/Expense__c/fields/ServiceExpenseNet__c.field-meta.xml
<CustomField>
    <fullName>ServiceExpenseNet__c</fullName>
    <label>Service - Expense Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>