force-app/main/default/objects/Expense__c/fields/ServiceExpenseNetCHF__c.field-meta.xml
<CustomField>
    <fullName>ServiceExpenseNetCHF__c</fullName>
    <formula>ServiceExpenseNet__c * CurrencyRateToCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service - Expense Net (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>