force-app/main/default/objects/Expense__c/fields/SupplierReceiverLocation__c.field-meta.xml
<CustomField>
    <fullName>SupplierReceiverLocation__c</fullName>
    <label>Supplier / Receiver / Location</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>