force-app/main/default/objects/Expense__c/fields/ValCheckValidExpense__c.field-meta.xml
<CustomField>
    <fullName>ValCheckValidExpense__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCheckValidExpense</label>
    <type>Checkbox</type>
</CustomField>