force-app/main/default/objects/Expense__c/fields/ValExpensetrackerIsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>ValExpensetrackerIsCurrentUser__c</fullName>
    <formula>IF( Expensetracker__r.User__r.Id = $User.Id ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValExpensetrackerIsCurrentUser</label>
    <type>Checkbox</type>
</CustomField>