force-app/main/default/objects/Expense__c/fields/ValNoDelete__c.field-meta.xml
<CustomField>
    <fullName>ValNoDelete__c</fullName>
    <formula>OR( 
  ISPICKVAL( ProjectName__r.ProjectStatus__c , &quot;Closed&quot;), 
  ISPICKVAL( Package__r.PackageStatus__c , &quot;Closed&quot;),
  AND( 
    NOT(ISBLANK(Package__r.PackageSuperior__c )),  
    ISPICKVAL(Package__r.PackageSuperior__r.PackageStatus__c,&quot;Closed&quot;)
   ), 
  ExpenseValidatedFinance__c =true,
ExpenseValidatedProjectResponsible__c =true
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValNoDelete</label>
    <type>Checkbox</type>
</CustomField>