force-app/main/default/objects/Expense__c/fields/ValUserIsAboveHierarchie__c.field-meta.xml
<CustomField>
    <fullName>ValUserIsAboveHierarchie__c</fullName>
    <formula>OR(
$User.Id =  Expensetracker__r.User__r.ManagerId ,
$User.Id =  Expensetracker__r.User__r.Manager.ManagerId,
$User.Id =  Expensetracker__r.User__r.Manager.Manager.ManagerId,
$User.Id =  Expensetracker__r.User__r.Manager.Manager.Manager.ManagerId
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValUserIsAboveHierarchie</label>
    <type>Checkbox</type>
</CustomField>