force-app/main/default/objects/Expense__c/fields/VATPercent__c.field-meta.xml
<CustomField>
    <fullName>VATPercent__c</fullName>
    <label>VAT %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
                <default>true</default>
                <label>0%</label>
            </value>
            <value>
                <fullName>8%</fullName>
            </value>
            <value>
                <fullName>7.7%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>