force-app/main/default/objects/Expense__c/recordTypes/CarTravel.recordType-meta.xml
<RecordType>
    <fullName>CarTravel</fullName>
    <active>true</active>
    <label>Car Travel</label>
</RecordType>