force-app/main/default/objects/Expense__c/validationRules/EC003_Expense_Card_No_Change_Validated_P.validationRule-meta.xml
<ValidationRule>
    <fullName>EC003_Expense_Card_No_Change_Validated_P</fullName>
    <active>true</active>
    <description>The Expense Card can not be changed anymore.</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

Priorvalue(ExpenseValidatedProjectResponsible__c) =true,
NOT( $User.IsProjectManager__c ),
NOT(  $User.PS180RoleFinanceApprover__c )
)</errorConditionFormula>
    <errorMessage>You are not allowed to change the Expense Card since the Project Manager has already validated the expense. Please contact the Project Manager for assistance.
(EC003)</errorMessage>
</ValidationRule>