force-app/main/default/objects/Expense__c/validationRules/EC004_Expense_Card_No_Change_Validated_F.validationRule-meta.xml
<ValidationRule>
    <fullName>EC004_Expense_Card_No_Change_Validated_F</fullName>
    <active>true</active>
    <description>The Expense Card can not be changed anymore.</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

Priorvalue(ExpenseValidatedFinance__c) =true,
NOT( $User.IsProjectManager__c ),
NOT(  $User.PS180RoleFinanceApprover__c )
)</errorConditionFormula>
    <errorMessage>You are not allowed to change the Expense Card since Finance has already validated the expense. Please contact Finance for assistance.
(EC004)</errorMessage>
</ValidationRule>