force-app/main/default/objects/Expense__c/validationRules/EC005_Package_Same_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>EC005_Package_Same_Type</fullName>
    <active>true</active>
    <description>The Expense card can only be attached to a Package of correct type.</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
Package__r.RecordType.DeveloperName &lt;&gt;&quot;Expense&quot;)</errorConditionFormula>
    <errorMessage>Please choose a Package of Type = Expense.
(EC005)</errorMessage>
</ValidationRule>