force-app/main/default/objects/Expense__c/validationRules/EC006_Expensetracker_No_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>EC006_Expensetracker_No_Change</fullName>
    <active>true</active>
    <description>The Expensetracker can not be changed anymore</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
ISCHANGED( Expensetracker__c ))</errorConditionFormula>
    <errorMessage>You can not change the expensetracker. Please get in touch with the Super User for assistance.
(EC006)</errorMessage>
</ValidationRule>