force-app/main/default/objects/Expense__c/validationRules/EC007_Only_Expense_For_Yourself.validationRule-meta.xml
<ValidationRule>
    <fullName>EC007_Only_Expense_For_Yourself</fullName>
    <active>true</active>
    <description>The expensetracker can only track expense for himself if no permission set available</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
Expensetracker__r.User__r.Id &lt;&gt; $User.Id,
$User.CanTrackExpensesForOthers__c  =false,
ExpenseValidatedProjectResponsible__c =false,
ExpenseValidatedFinance__c  =false,
OR(
ISNEW() ,
 ISCHANGED(Expensetracker__c),
 ISCHANGED(ExpenseDate__c),
 ISCHANGED(ExpenseGross__c),
 ISCHANGED(PaymentType__c),
 ISCHANGED(BusinessReason__c),
 ISCHANGED(SupplierReceiverLocation__c),
 ISCHANGED(ListOfNames__c),
 ISCHANGED(ExpenseSubType__c)
)
)</errorConditionFormula>
    <errorMessage>You can not add or change expenses for somebody else. 
(EC007)</errorMessage>
</ValidationRule>