force-app/main/default/objects/Expense__c/validationRules/EC010_Payment_Type_Company_Car.validationRule-meta.xml
<ValidationRule>
    <fullName>EC010_Payment_Type_Company_Car</fullName>
    <active>true</active>
    <description>Must choose Car if Expense Sub Type = Car (Company)</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

 RecordType.DeveloperName =&quot;CarTravel&quot;,
ISPICKVAL(  ExpenseSubType__c  ,&quot;CarCompany&quot;),
ISBLANK(  Car__c  )
)</errorConditionFormula>
    <errorDisplayField>Car__c</errorDisplayField>
    <errorMessage>Please choose the car used for this expense.
 (EC010)</errorMessage>
</ValidationRule>