force-app/main/default/objects/Expense__c/validationRules/EC011_PM_Validation_only_PM.validationRule-meta.xml
<ValidationRule>
    <fullName>EC011_PM_Validation_only_PM</fullName>
    <active>true</active>
    <description>The Expense Card can only be validated by PM</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

 ISCHANGED( ExpenseValidatedProjectResponsible__c ),
 $User.IsProjectManager__c =false
)</errorConditionFormula>
    <errorMessage>You are not allowed to validate the expense card. Please contact your Super User for assistance.
(EC011)</errorMessage>
</ValidationRule>