force-app/main/default/objects/Expense__c/validationRules/EC013_PM_Validation_only_Finance.validationRule-meta.xml
<ValidationRule>
    <fullName>EC013_PM_Validation_only_Finance</fullName>
    <active>true</active>
    <description>The Expense Card can only be validated by Finance.</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

 ISCHANGED(  ExpenseValidatedFinance__c  ),
 $User.PS180RoleFinanceApprover__c  =false
)</errorConditionFormula>
    <errorMessage>You are not allowed to validate the expense card. Please contact your Super User for assistance.
(EC013)</errorMessage>
</ValidationRule>