force-app/main/default/objects/Expense__c/validationRules/EC014_Expense_Gross_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>EC014_Expense_Gross_Not_Null</fullName>
    <active>true</active>
    <description>Expense Gross can not be null</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true, 
ISNULL(ExpenseGross__c)
)</errorConditionFormula>
    <errorDisplayField>ExpenseGross__c</errorDisplayField>
    <errorMessage>Expense Gross can not be empty.
(EC014)</errorMessage>
</ValidationRule>