force-app/main/default/objects/Expense__c/validationRules/EC016_Car_Distance_Compensation_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>EC016_Car_Distance_Compensation_Not_Null</fullName>
    <active>true</active>
    <description>Car Distance &amp; Compensation not Null</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true, 
 RecordType.DeveloperName =&quot;CarTravel&quot;,
OR(
ISNULL(Distance__c),
ISNULl( DistanceCompensation__c )
))</errorConditionFormula>
    <errorDisplayField>Distance__c</errorDisplayField>
    <errorMessage>Car Distance and/or Compensation can not be empty.
(EC016)</errorMessage>
</ValidationRule>