force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExpenseDate__c</columns>
    <columns>ExpenseType__c</columns>
    <columns>ExpenseSubType__c</columns>
    <columns>SupplierReceiverLocation__c</columns>
    <columns>ExpenseGross__c</columns>
    <columns>Expensetracker__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LocalCurrency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Jochen</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <group>Skywalk_Skywalk_Data_Quality</group>
    </sharedTo>
</ListView>