force-app/main/default/objects/Expense__c/listViews/Expense_Employee.listView-meta.xml
<ListView>
    <fullName>Expense_Employee</fullName>
    <columns>NAME</columns>
    <columns>ExpenseType__c</columns>
    <columns>ExpenseDate__c</columns>
    <columns>Expensetracker__c</columns>
    <columns>ExpenseSubType__c</columns>
    <columns>BusinessReason__c</columns>
    <columns>ExpenseGross__c</columns>
    <columns>ExpenseValidatedFinance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expensetracker__c</field>
        <operation>contains</operation>
        <value>traber</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Expense__c.Receipt</value>
    </filters>
    <filters>
        <field>ExpenseValidatedFinance__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ExpenseDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>8/26/2019</value>
    </filters>
    <filters>
        <field>ExpenseDate__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2020</value>
    </filters>
    <label>Expense_Employee</label>
    <sharedTo>
        <group>Skywalk_FIN_Alle</group>
        <group>Skywalk_HR_OM</group>
    </sharedTo>
</ListView>